<resources>
    <string name="app_name">Pets</string>
    <string name="complete">완료</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">패스워드</string>
    <string name="password_confirm">패스워드 확인</string>
    <string name="signUp">회원가입</string>
    <string name="signIn">로그인</string>
    <string name="pets">Pets</string>
    <string name="noGroup">속한 그룹이 없습니다.\n 새로운 그룹을 만들어 보세요.</string>
    <string name="add">Add</string>
    <string name="group_name">그룹명</string>
    <string name="group_info">그룹 소개</string>
    <string name="main_image">대표 이미지</string>
    <string name="is_share">공개 여부</string>
    <string name="_private">비공개</string>
    <string name="_public">공개</string>
    <string name="account">계정</string>
    <string name="info_profile">프로필 정보</string>
    <string name="info_group">그룹 정보</string>
    <string name="member">멤버</string>
    <string name="posts">게시글</string>
    <string name="posts_add">작성한 글</string>
    <string name="posts_favorite">좋아요한 글</string>
    <string name="age">나이</string>
    <string name="sex">성별</string>
    <string name="weight">몸무게</string>
    <string name="animal_number">동물등록번호</string>
    <string name="subspecies">품종</string>
    <string name="species">분류</string>
    <string name="memo">메모</string>
    <string name="medical">병원</string>
    <string name="data">정보</string>
    <string name="title">제목</string>
    <string name="hospital">병원</string>
    <string name="time">시간</string>
    <string name="content">내용</string>
    <string name="info">정보</string>
    <string name="group">그룹</string>
    <string name="gallery">갤러리</string>
    <string name="item">물품</string>
    <string name="add_member">멤버 추가</string>
    <string name="image">이미지</string>
    <string name="tag">태그</string>
    <string name="hint_inputTag">태그를 입력하세요</string>
    <string name="edit">편집</string>
    <string name="shortcut">바로가기</string>
    <string name="nickName">닉네임</string>
    <string name="invite">초대</string>
    <string name="hint_email">aabbcc@lacuc.pets.com</string>
    <string name="item_name">물품명</string>
    <string name="category">분류</string>
    <string name="price">가격</string>

    <string-array name="member_authority_array">
        <item>관리자</item>
        <item>수정권한</item>
        <item>권한없음</item>
    </string-array>

    <string-array name="animal_sex_array">
        <item>남</item>
        <item>여</item>
    </string-array>
</resources>