<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignInFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_half_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/content_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_half_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pets"
            android:textColor="@color/white"
            android:textSize="40sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rect_white_a50rad40"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textAppearance="?textAppearanceHeadline6" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/rect_white_a50rad40"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textAppearance="?textAppearanceHeadline6" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_signIn"
        style="@style/Widget.App.Button.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="8dp"
        android:text="@string/signIn"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintEnd_toStartOf="@id/btn_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_login" />

    <Button
        android:id="@+id/btn_signUp"
        style="@style/Widget.App.Button.Rounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:paddingVertical="8dp"
        android:text="@string/signUp"
        android:textAppearance="?textAppearanceHeadline6"
        android:textColor="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_signIn"
        app:layout_constraintTop_toBottomOf="@id/content_login"
        app:rippleColor="?colorPrimary"
        app:strokeColor="?colorPrimary"
        app:strokeWidth="1dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_signIn">

        <ImageView
            android:id="@+id/btn_login_kakao"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:src="@drawable/ic_login_kakao" />

        <ImageView
            android:id="@+id/btn_login_naver"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:src="@drawable/ic_login_naver" />

        <ImageView
            android:id="@+id/btn_login_google"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:src="@drawable/ic_login_google" />

        <ImageView
            android:id="@+id/btn_login_facebook"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:padding="10dp"
            android:src="@drawable/ic_login_facebook" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>